--- a/index.html
+++ b/index.html
@@ -425,6 +425,7 @@
     <script src="lib/astro.js"></script> 
     <script src="leaflet.js"></script> 
     <script src="turf.min.js"></script>
+    <script src="gnss-dashboard-full.js"></script>
     
     
 </body>
