--- a/index.html
+++ b/index.html
@@ -204,10 +204,9 @@
 
             <section class="panel" aria-labelledby="imu-heading">
                 <h2 id="imu-heading"><i class="fas fa-microchip"></i> IMU (Accéléromètre/Gyroscope)</h2>
-                <div class="data-point"><span>Statut Capteur</span><span id="devicemotion">Inactif</span></div>
-                <div class="data-point"><span>Accélération X</span><span id="handleDeviceMotion">N/A</span></div>
-                <div class="data-point"><span>Accélération Y</span><span id="handleDeviceMotion">N/A</span></div>
-                <div class="data-point"><span>Accélération Z</span><span id="handleDeviceMotion">N/A</span></div>
+                <div class="data-point"><span>Accélération X</span><span id="accel-x">0</span></div>
+                <div class="data-point"><span>Accélération Y</span><span id="accel-y">0</span></div>
+                <div class="data-point"><span>Accélération Z</span><span id="accel-z">N/A</span></div>
                 <div class="data-point"><span>Champ Magnétique X</span><span id="mag-x">N/A</span></div>
                 <div class="data-point"><span>Champ Magnétique Y</span><span id="mag-y">N/A</span></div>
                 <div class="data-point"><span>Champ Magnétique Z</span><span id="mag-z">N/A</span></div>
