--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
                     <span id="speed-stable">--.- km/h</span>
                     <small id="speed-status-text">Attente du signal GPS...</small>
                 </div>
+                <div class="data-point"><span>Vitesse Stable (km/h)</span><span id="speed-stable-kmh">--.- km/h</span></div>
                 <div class="data-point"><span>Vitesse Stable (m/s)</span><span id="speed-stable-ms">-- m/s</span></div>
-                <div class="data-point"><span>Vitesse Stable (km/s)</span><span id="speed-stable-kms">-- km/s</span></div>
-                <div class="data-point"><span>Vitesse 3D (Instantanée)</span><span id="speed-3d-inst">-- km/h</span></div>
-                <div class="data-point"><span>Vitesse Brute (m/s)</span><span id="speed-raw-ms">-- m/s</span></div>
+                <div class="data-point"><span>Vitesse Brute (m/s)</span><span id="raw-speed-ms">-- m/s</span></div>
+                <div class="data-point"><span>Vitesse Max (Session)</span><span id="vmax-session">0.0 km/h</span></div>
                 <hr>
                 <div class="data-point"><span>Vitesse Max (Session)</span><span id="vitesse-max-session">0.0 km/h</span></div>
                 <div class="data-point"><span>Vitesse Moyenne (Mvt)</span><span id="speed-avg-moving">0.0 km/h</span></div>
