--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
                     <span id="speed-stable">--.- km/h</span>
                     <small id="speed-status-text">Attente du signal GPS...</small>
                 </div>
-                <div class="data-point"><span>Vitesse Stable (km/h)</span><span id="speed-stable-kmh">--.- km/h</span></div>
-                <div class="data-point"><span>Vitesse Stable (m/s)</span><span id="speed-stable-ms">-- m/s</span></div>
-                <div class="data-point"><span>Vitesse Brute (m/s)</span><span id="raw-speed-ms">-- m/s</span></div>
-                <div class="data-point"><span>Vitesse Max (Session)</span><span id="vmax-session">0.0 km/h</span></div>
+                <div class="data-point"><span>Vitesse Stable (km/h)</span><span id="speed-stable-kmh">0.0 km/h</span></div>
+                <div class="data-point"><span>Vitesse Stable (m/s)</span><span id="speed-stable-ms">0.00 m/s</span></div>
+                <div class="data-point"><span>Vitesse Brute (m/s)</span><span id="raw-speed-ms">0.00 m/s</span></div>
+                <div class="data-point"><span>Vitesse Max (Session)</span><span id="vmax-session">0.0 km/h</span></div>div>
                 <hr>
                 <div class="data-point"><span>Vitesse Max (Session)</span><span id="vitesse-max-session">0.0 km/h</span></div>
                 <div class="data-point"><span>Vitesse Moyenne (Mvt)</span><span id="speed-avg-moving">0.0 km/h</span></div>
