Fix body tag and reorder script tags

--- a/index.html
+++ b/index.html
@@ -415,11 +415,10 @@
     </main> 
     
 <body>
+    <body>
     <script src="vendor/math.min.js"></script>    <script src="vendor/leaflet.js"></script>
-    <script src="vendor/turf.min.js"></script>
-
-    <script src="lib/ukf-lib.js"></script>      <script src="lib/ephem.js"></script>
-    <script src="lib/astro.js"></script>        <script src="gnss-dashboard-full.js"></script>   <script>
+    <script src="vendor/turf.min.js"></script>  <script src="lib/ukf-lib.js"></script>      <script src="lib/ephem.js"></script>
+    <script src="lib/astro.js"></script>        <script src="gnss-dashboard-full.js"></script>   </body>   <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('./sw.js')
                 .then(reg => console.log('Service Worker Enregistré'))
