Update speed display structure in index.html

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <section class="panel" aria-labelledby="speed-heading">
                 <h2 id="speed-heading"><i class="fas fa-tachometer-alt"></i> Vitesse, Distance & Relativité</h2>
                 <div class="speed-display" role="status" aria-live="polite">
-                    <span id="speed-stable">--.- km/h</span>
+                    <div class="data-point"><span>Vitesse Stable (km/h)</span><span id="speed-main-display">0.0 km/h</span></div>
                     <small id="speed-status-text">Attente du signal GPS...</small>
                 </div>
                 <div class="data-point"><span>Vitesse Stable (km/h)</span><span id="speed-stable-kmh">0.0 km/h</span></div>
