--- a/index.html
+++ b/index.html
@@ -413,17 +413,26 @@
             </section>
         </div>
     </main> 
-    
-<body>
+
     <body>
-    <script src="vendor/math.min.js"></script>    
-<script>
-    // Ajout d'un test simple pour vérifier si math est bien accessible globalement
-    if (typeof math === 'undefined') {
-        alert("CRITIQUE: math.min.js n'a pas chargé la variable 'math'. Le UKF va échouer.");
-    }    <script src="vendor/leaflet.js"></script>
-    <script src="vendor/turf.min.js"></script>  <script src="lib/ukf-lib.js"></script>      <script src="lib/ephem.js"></script>
-    <script src="lib/astro.js"></script>        <script src="gnss-dashboard-full.js"></script>   </body>   <script>
+    <script src="vendor/math.min.js"></script> 
+    <script src="vendor/leaflet.js"></script>
+    <script src="vendor/turf.min.js"></script>
+
+    <script>
+        if (typeof math === 'undefined') {
+            console.error("⛔ CRITIQUE: math.min.js n'a pas chargé la variable 'math'.");
+            alert("Erreur Critique: Librairie math.js manquante !");
+        } else {
+            console.log("✅ math.js chargé avec succès.");
+        }
+    </script> <script src="lib/ukf-class.js"></script>      
+    <script src="lib/ephem.js"></script>
+    <script src="lib/astro.js"></script>
+
+    <script src="gnss-dashboard-full.js"></script>
+
+    <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('./sw.js')
                 .then(reg => console.log('Service Worker Enregistré'))
