--- a/index.html
+++ b/index.html
@@ -166,6 +166,13 @@
                             <option value="CONCRETE">Grotte/Tunnel (x7.0)</option>
                             <option value="METAL">Métal/Bâtiment (x5.0)</option>
                         </select>
+                        <div class="select-wrapper">
+    <select id="ukf-reactivity-mode">
+        <option value="adaptive" selected>Automatique (Adaptatif)</option>
+        <option value="high">Haute (x1.0)</option>
+        <option value="low">Basse (x0.1)</option>
+    </select>
+                    
                     </div>
                     <div class="control-input-full">
                         <div class="data-point"><span>Facteur d'environnement</span><span id="env-factor">Normal (x1.0)</span></div>
