--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
                 <div class="data-point"><span>Énergie Cin.</span><span id="kinetic-energy">0.00 J</span></div>
                 <div class="data-point"><span>Énergie Repos</span><span id="rest-mass-energy">N/A</span></div>
                 <div class="data-point"><span>Momentum</span><span id="momentum">N/A</span></div>
-                <div class="data-point"><span>Schwarzschild</span><span id="rs-object">N/A</span></div> <hr>
+                <div class="data-point"><span>Schwarzschild</span><span id="rs-object">N/A</span></div>
+                <hr>
                 <h3>Distance (3D)</h3>
                 <div class="data-point"><span>Totale</span><span id="distance-total-3d">0.000 km</span></div>
                 <div class="data-point"><span>Lumière (s)</span><span id="distance-light-s">0.00 s</span></div>
@@ -195,7 +196,7 @@
                         <option value="fast">Rapide</option>
                     </select>
                 </div>
-                <div class="data-point"><span>Statut Fusion</span><span id="ekf-status">N/A</span></div>
+                <div class="data-point"><span>Statut Fusion</span><span id="ukf-status">N/A</span></div>
                 <div class="data-point"><span>Incertitude Vit.</span><span id="uncertainty-vel-p">N/A</span></div>
                 <div class="data-point"><span>Incertitude Alt.</span><span id="ukf-alt-sigma">N/A</span></div>
                 <div class="data-point"><span>Bruit Mesure (R)</span><span id="ukf-r-noise">N/A</span></div>
@@ -264,4 +265,4 @@
     <script src="gnss-dashboard-full.js"></script>
 
 </body>
-     </html>
+    </html>
