--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             <h3><i class="fas fa-satellite-dish"></i> Contrôles & Système</h3>
             <div class="data-point"><span>Heure Locale (NTP)</span><span id="local-time">N/A</span></div>
             <div class="data-point"><span>Date & Heure (UTC/GMT)</span><span id="utc-datetime">N/A</span></div>
+            <div class="data-point"><span>Décalage Heure NTP</span><span id="ntp-offset">N/A</span></div>
             <hr>
             <div class="data-point"><span>Temps écoulé (Session)</span><span id="elapsed-time">0.00 s</span></div>
             <div class="data-point"><span>Temps de Mouvement</span><span id="time-motion">0.00 s</span></div>
