--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <hr>
 
             <h3><i class="fas fa-map-marked-alt"></i> Distance (3D)</h3>
-            <div class="data-point"><span>Distance Totale (3D)</span><span id="distance-total-3d">0.000 km | 0.00 m</span></div>
+            <div class="data-point"><span>Vitesse du Son Locale (Cor.)</span><span id="speed-of-sound-cor">N/A</span></div>
             <div class="data-point"><span>Rapport de Distance (Alt/Nether)</span><span id="distance-ratio-display">1.000</span></div>
             <div class="data-point"><span>Distance (s-lumière)</span><span id="distance-light-s">0.00e+00 s</span></div>
             <div class="data-point"><span>Distance (min-lumière)</span><span id="distance-light-min">0.00e+00 min</span></div>
@@ -226,7 +226,7 @@
             <div class="data-point"><span>Distance (sem-lumière)</span><span id="distance-light-w">0.00e+00 sem</span></div>
             <div class="data-point"><span>Distance (mois-lumière)</span><span id="distance-light-m">0.00e+00 mois</span></div>
             <div class="data-point"><span>Distance (UA / al)</span><span id="distance-ua-al">0.00e+00 UA | 0.00e+00 al</span></div>
-            <div class="data-point"><span>Distance Maximale Visible</span><span id="max-visible-distance">N/A</span></div>
+            <div class="data-point"><span>Distance Maximale Visible</span><span id="distance-max-visible">N/A</span></div>
             <div class="data-point"><span>Distance Horizon (s)</span><span id="horizon-distance">N/A</span></div>
             <div class="data-point"><span>Visibilité Cible</span><span id="target-visibility">N/A</span></div>
 
@@ -264,10 +264,10 @@
         <section>
             <h3><i class="fas fa-cloud-sun"></i> Météo & BioSVT</h3>
             <div class="data-point"><span>Statut Météo</span><span id="status-weather">INACTIF</span></div>
-            <div class="data-point"><span>Température Air</span><span id="temp-air-2">N/A</span></div>
-            <div class="data-point"><span>Pression Atmosphérique</span><span id="pressure-2">N/A</span></div>
-            <div class="data-point"><span>Humidité Relative</span><span id="humidity-2">N/A</span></div>
-            <div class="data-point"><span>Densité de l'air (ρ)</span><span id="air-density">N/A</span></div>
+            <div class="data-point"><span>Température Air</span><span id="temp-air">N/A</span></div>
+            <div class="data-point"><span>Pression Atmosphérique</span><span id="pressure-atm">N/A</span></div>
+            <div class="data-point"><span>Humidité Relative</span><span id="humidity-rel">N/A</span></div>
+            <div class="data-point"><span>Densité de l'air (ρ)</span><span id="densite-air">N/A</span></div>
             <div class="data-point"><span>Point de Rosée</span><span id="dew-point">N/A</span></div>
             
             <hr>
