--- a/index.html
+++ b/index.html
@@ -87,20 +87,17 @@
 <main class="dashboard-container">
     <header>GNSS SpaceTime Dashboard • UKF 21 États Fusion Professionnel</header>
 
-    <div class="column-1">
-        
-        <section>
-            <h3><i class="fas fa-satellite-dish"></i> Contrôles & Système</h3>
-            <div class="data-point"><span>Heure Locale (NTP)</span><span id="local-time">N/A</span></div>
-            <div class="data-point"><span>Date & Heure (UTC/GMT)</span><span id="utc-datetime">N/A</span></div>
-            <div class="data-point"><span>Décalage Heure NTP</span><span id="ntp-offset">N/A</span></div>
-            <hr>
-            <div class="data-point"><span>Temps écoulé (Session)</span><span id="elapsed-time">0.00 s</span></div>
-            <div class="data-point"><span>Temps de Mouvement</span><span id="time-motion">0.00 s</span></div>
-            <div class="data-point"><span>Heure Minecraft</span><span id="time-minecraft">00:00</span></div>
-            
+    <div class="data-group">
+    <h3>Contrôles & Système</h3>
+    <div class="data-point"><span>Heure Locale (NTP)</span><span id="local-time-display">N/A</span></div>
+    <div class="data-point"><span>Date & Heure (UTC/GMT)</span><span id="utc-datetime-display">N/A</span></div>
+    <div class="data-point"><span>Décalage Heure NTP</span><span id="ntp-offset">N/A</span></div>
+    <div class="data-point"><span>Temps écoulé (Session)</span><span id="elapsed-time-session">0.00 s</span></div>
+    <div class="data-point"><span>Temps de Mouvement</span><span id="elapsed-time-motion">0.00 s</span></div>
+    <div class="data-point"><span>Heure Minecraft</span><span id="minecraft-time-display">00:00</span></div>   
+    <button id="gps-pause-toggle" class="inactive">▶️ DÉMARRER SYSTÈME</button>
+    </div>
             <div class="controls-group" style="margin-top: 15px;">
-                <button id="gps-pause-toggle" class="control-btn accent">▶️ DÉMARRER SYSTÈME</button>
                 <div class="data-point"><span>Haute Fréquence</span><span id="high-frequency-status" class="success">ACTIF</span></div>
                 <div class="data-point"><span>🛑 Arrêt d'urgence:</span><span id="emergency-stop-status" class="success">INACTIF 🟢</span></div>
                 <div class="data-point"><span>Mode Nuit</span><span id="night-mode-status">ACTIF</span></div>
