--- a/index.html
+++ b/index.html
@@ -370,9 +370,9 @@
     if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('./sw.js')
             .then(reg => console.log('Service Worker Enregistré'))
-            .catch(err => console.log('Échec de l\'enregistrement du Service Worker:', err));
+            .catch(err => console.error('Erreur Service Worker:', err));
     }
 </script>
 
 </body>
- </html>
+</html>
