--- a/index.html
+++ b/index.html
@@ -123,6 +123,28 @@
         /* Theoretical quantities panel styling */
         .theoretical-list { max-height: 420px; overflow: auto; margin-top: 8px; }
         .theoretical-crit { color: #ffcf59; font-weight: 800; }
+
+        #globe-container {
+    width: 200px;
+    height: 200px;
+    margin: 20px auto;
+    border-radius: 50%;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 0.1s ease-out; /* Pour la fluidité du mouvement */
+    background: radial-gradient(circle at 30% 30%, #2c3e50, #000);
+    box-shadow: 0 0 50px rgba(0, 123, 255, 0.4), inset 0 0 30px rgba(0, 123, 255, 0.2);
+    border: 1px solid rgba(0, 123, 255, 0.3);
+}
+
+#globe-container::before {
+    content: "";
+    position: absolute;
+    top: 0; left: 0; width: 100%; height: 100%;
+    border-radius: 50%;
+    background: repeating-linear-gradient(0deg, transparent, transparent 2px, rgba(0, 123, 255, 0.1) 3px);
+    pointer-events: none;
+            }
     </style>
 </head>
 <body class="dark-mode"> 
