--- a/index.html
+++ b/index.html
@@ -359,6 +359,13 @@
                 <div class="data-point"><span>Statut GPS (Acquisition)</span><span id="gps-status">N/A</span></div> <div class="data-point"><span>Statut EKF (Fusion)</span><span id="ukf-status">N/A</span></div> <div class="data-point"><span>Incertitude Vitesse (P)</span><span id="ukf-velocity-uncertainty">N/A</span></div> <div class="data-point"><span>Incertitude Alt. (σ)</span><span id="ukf-alt-uncertainty">N/A</span></div> <div class="data-point"><span>Bruit Mesure Vitesse (R)</span><span id="ukf-r-noise">N/A</span></div>
                 <div class="data-point"><span>Bande Passante (Nyquist)</span><span id="bande-passante">N/A</span></div>
                 <div class="data-point"><span>Forcer Précision GPS</span><span id="gps-accuracy-display">0.000000 m</span></div>
+                <div class="data-point"><span>Statut Physique</span><span id="status-physique">En attente...</span>
+</div>
+
+<div class="data-point">
+    <span>Fréquence Capteurs</span>
+    <span id="nyquist-limit">0 Hz</span>
+</div>
             </section>
 
             <section class="panel" aria-labelledby="bubble-heading">
