--- a/index.html
+++ b/index.html
@@ -360,12 +360,11 @@
                 <div class="data-point"><span>Bande Passante (Nyquist)</span><span id="bande-passante">N/A</span></div>
                 <div class="data-point"><span>Forcer Précision GPS</span><span id="gps-accuracy-display">0.000000 m</span></div>
                 <div class="data-point"><span>Statut Physique</span><span id="status-physique">En attente...</span>
-</div>
-
-<div class="data-point">
-    <span>Fréquence Capteurs</span>
-    <span id="nyquist-limit">0 Hz</span>
-</div>
+                <div class="data-point"><span>Mode Dynamique :</span><span id="status-physique" style="color: #00ff00;">Initialisation...</span>    
+                <div class="data-point"><span>Fréquence d'Échantillonnage :</span><span id="nyquist-limit">-- Hz</span>
+                <div class="data-point"><span>Fréquence Capteurs</span><span id="nyquist-limit">0 Hz</span>
+                </div>  
+                    
             </section>
 
             <section class="panel" aria-labelledby="bubble-heading">
