--- a/index.html
+++ b/index.html
@@ -69,10 +69,16 @@
         #emergency-stop-btn.active { animation: pulse-red 1s infinite alternate; }
         @keyframes pulse-red { 0% { box-shadow: 0 0 0 0 rgba(220, 53, 69, 0.7); } 100% { box-shadow: 0 0 0 10px rgba(220, 53, 69, 0); } }
         
-        #map-container { position: relative; }
-        #map { height: 350px; width: 100%; border-radius: 8px; margin-top: 15px; background-color: #333; }
-        #xray-button { position: absolute; top: 25px; right: 10px; z-index: 1000; background-color: rgba(0,0,0,0.6); color: white; border-radius: 50%; width: 30px; height: 30px; padding: 0; font-size: 0.8em; line-height: 30px; text-align: center; }
-
+        #map-container {
+    width: 100%;
+    height: 300px; /* Force une hauteur fixe */
+    border-radius: 8px;
+    border: 1px solid var(--border-dark);
+    margin-top: 10px;
+    z-index: 1; /* Évite les superpositions bizarres */
+}
+#map { height: 100%; width: 100%; } /* Assure que Leaflet remplit le container */
+        
         /* Horloge astro (Minecraft) */
         #minecraft-clock-container { display: flex; justify-content: center; align-items: center; flex-direction: column; padding-top: 10px; position: relative; }
         #minecraft-clock { 
