--- a/index.html
+++ b/index.html
@@ -69,16 +69,23 @@
         #emergency-stop-btn.active { animation: pulse-red 1s infinite alternate; }
         @keyframes pulse-red { 0% { box-shadow: 0 0 0 0 rgba(220, 53, 69, 0.7); } 100% { box-shadow: 0 0 0 10px rgba(220, 53, 69, 0); } }
         
+        /* Empêcher le débordement de la carte */
         #map-container {
-    width: 100%;
-    height: 300px; /* Force une hauteur fixe */
-    border-radius: 8px;
-    border: 1px solid var(--border-dark);
-    margin-top: 10px;
-    z-index: 1; /* Évite les superpositions bizarres */
-}
-#map { height: 100%; width: 100%; } /* Assure que Leaflet remplit le container */
-        
+        width: 100%;
+        height: 350px;
+        position: relative;
+        border: 1px solid var(--border-dark);
+        border-radius: 8px;
+        overflow: hidden; /* Verrouille la carte dans son cadre */
+        }
+        #map { height: 100% !important; width: 100% !important; }
+
+       /* Forcer la grille à rester stable */
+       .dashboard-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+        gap: 15px;
+        }
         /* Horloge astro (Minecraft) */
         #minecraft-clock-container { display: flex; justify-content: center; align-items: center; flex-direction: column; padding-top: 10px; position: relative; }
         #minecraft-clock { 
