--- a/index.html
+++ b/index.html
@@ -453,14 +453,18 @@
         }
     </script>
     
+    </main>
+ 
     <script src="vendor/leaflet.js"></script>
     <script src="vendor/turf.min.js"></script>
 
-    <script src="lib/ukf-master.js"></script>      
     <script src="lib/ephem.js"></script>
     <script src="lib/astro.js"></script>
+    <script src="lib/ukf-lib.js"></script>
 
     <script src="gnss-dashboard-full.js"></script>
+
+</body>
 
 </body>
                                                                                                                                </html>
