--- a/index.html
+++ b/index.html
@@ -442,29 +442,21 @@
             </section>
         </div>
     </main>
+
     <script src="vendor/math.min.js"></script> 
-    
     <script>
         if (typeof math === 'undefined') {
-            console.error("⛔ ÉCHEC CRITIQUE: math.min.js n'a pas réussi à définir l'objet 'math' !");
+            console.error("⛔ ÉCHEC CRITIQUE: math.min.js manquant !");
             window.ukfFailedToLoad = true; 
-        } else {
-            console.log("✅ math.js est défini et prêt.");
         }
     </script>
-    
-    </main>
- 
     <script src="vendor/leaflet.js"></script>
     <script src="vendor/turf.min.js"></script>
 
     <script src="lib/ephem.js"></script>
     <script src="lib/astro.js"></script>
-    <script src="lib/ukf-lib.js"></script>
+    <script src="lib/ukf-lib.js"></script> 
 
     <script src="gnss-dashboard-full.js"></script>
 
 </body>
-
-</body>
-                                                                                                                               </html>
