--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@
 
             <section class="panel" aria-labelledby="imu-heading">
                 <h2 id="imu-heading"><i class="fas fa-microchip"></i> IMU (Accéléromètre/Gyroscope)</h2>
-                <div class="data-point"><span>Accélération X</span><span id="accel-x">0</span></div>
-                <div class="data-point"><span>Accélération Y</span><span id="accel-y">0</span></div>
-                <div class="data-point"><span>Accélération Z</span><span id="accel-z">N/A</span></div>
+                <div class="data-point"><span>Accélération X</span><span id="acc-x">0</span></div>
+                <div class="data-point"><span>Accélération Y</span><span id="acc-y">0</span></div>
+                <div class="data-point"><span>Accélération Z</span><span id="acc-z">N/A</span></div>
                 <div class="data-point"><span>Champ Magnétique X</span><span id="mag-x">N/A</span></div>
                 <div class="data-point"><span>Champ Magnétique Y</span><span id="mag-y">N/A</span></div>
                 <div class="data-point"><span>Champ Magnétique Z</span><span id="mag-z">N/A</span></div>
@@ -279,7 +279,7 @@
                 <div class="data-point"><span>Temps Dilation (Vitesse)</span><span id="time-dilation-vitesse">0.00 ns/j</span></div>
                 <div class="data-point"><span>Temps Dilation (Gravité)</span><span id="time-dilation-gravite">0.00 ns/j</span></div>
                 <div class="data-point"><span>Énergie Relativiste (E)</span><span id="relativistic-energy">N/A</span></div>
-                <div class="data-point"><span>Énergie de Masse au Repos (E₀)</span><span id="rest-mass-energy">N/A</span></div>
+                <div class="data-point"><span>Énergie de Masse (E₀)</span><span id="rest-mass-energy">N/A</span></div>
                 <div class="data-point"><span>Quantité de Mouvement (p)</span><span id="momentum">N/A</span></div>
                 <div class="data-point"><span>Rayon de Schwarzschild (Rs)</span><span id="schwarzschild-radius">N/A</span></div>
                 <div class="data-point"><span>Vitesse de la lumière (c)</span><span id="const-c">299792458 m/s</span></div>
@@ -374,7 +374,7 @@
                         <option value="STABLE">Microscopique (x2.5)</option>
                     </select>
                 </div>
-                <div class="data-point"><span>Statut GPS (Acquisition)</span><span id="gps-status">N/A</span></div> 
+                <div class="data-point"><span>Statut GPS</span><span id="gps-status">N/A</span></div>
                 <div class="data-point"><span>Statut EKF (Fusion)</span><span id="ukf-status">N/A</span></div> 
                 <div class="data-point"><span>Incertitude Vitesse (P)</span><span id="ukf-velocity-uncertainty">N/A</span></div> 
                 <div class="data-point"><span>Incertitude Alt. (σ)</span><span id="ukf-alt-uncertainty">N/A</span></div> 
