--- a/index.html
+++ b/index.html
@@ -444,18 +444,13 @@
     </main>
 
     <script src="vendor/math.min.js"></script> 
-    <script>
-        if (typeof math === 'undefined') {
-            console.error("⛔ ÉCHEC CRITIQUE: math.min.js manquant !");
-            window.ukfFailedToLoad = true; 
-        }
-    </script>
     <script src="vendor/leaflet.js"></script>
     <script src="vendor/turf.min.js"></script>
 
     <script src="lib/ephem.js"></script>
     <script src="lib/astro.js"></script>
-    <script src="lib/ukf-lib.js"></script> 
+
+    <script src="ukf-class.js"></script> 
 
     <script src="gnss-dashboard-full.js"></script>
 
