--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
     <script src="lib/ephem.js"></script>
     <script src="lib/astro.js"></script>
 
-    <script src="ukf-class.js"></script> 
+    <script src="ukf-lib.js"></script> 
 
     <script src="gnss-dashboard-full.js"></script>
 
