--- a/index.html
+++ b/index.html
@@ -460,8 +460,13 @@
     <script src="lib/ukf-lib.js"></script> <script src="js/gnss-dashboard-full.js"></script>
 
     <script>
+        
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.8.0/math.js"></script>
+
         <script src="vendor/leaflet.js"></script>
-<script src="gnss-dashboard-full.js"></script>
+
+        <script src="gnss-dashboard-full.js"></script>
+    
    </script>
 </body>
 </html>
