--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 
     <script>
         
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.8.0/math.js"></script>
+        <script src="vendor/math.min.js"></script>
 
         <script src="vendor/leaflet.js"></script>
 
