--- a/index.html
+++ b/index.html
@@ -461,11 +461,10 @@
 
     <script>
         
-        <script src="vendor/math.min.js"></script>
+    <script src="vendor/math.min.js"></script>
+    <script src="vendor/leaflet.js"></script>
 
-        <script src="vendor/leaflet.js"></script>
-
-        <script src="gnss-dashboard-full.js"></script>
+    <script src="js/gnss-dashboard-full.js"></script>
     
    </script>
 </body>
