--- a/index.html
+++ b/index.html
@@ -457,14 +457,31 @@
         </div>
     </main>
 
-    <script src="lib/ukf-lib.js"></script> <script src="js/gnss-dashboard-full.js"></script>
+    <script src="vendor/math.min.js"></script> 
+    <script src="vendor/leaflet.js"></script> 
+    <script src="lib/astro.js"></script>
+    <script src="lib/ukf-lib.js"></script> 
+    <script src="gnss-dashboard-full.js"></script>
 
     <script>
-        
-    <script src="vendor/math.min.js"></script>
-    <script src="vendor/leaflet.js"></script>
-
-    <script src="js/gnss-dashboard-full.js"></script>
+        window.addEventListener('load', function() {
+            setTimeout(() => {
+                // CORRECTION : On vérifie le nom REEL de la classe dans ukf-class (13)
+                if (typeof window.UltimateUKFEngine === 'undefined') {
+                    console.error("❌ Moteur UltimateUKFEngine non détecté.");
+                    document.getElementById('gps-status').textContent = "ERREUR LIAISON JS";
+                    document.getElementById('gps-status').style.color = "red";
+                } else {
+                    console.log("✅ Système Ready. Initialisation du moteur...");
+                    // On force la création de l'instance si elle n'existe pas
+                    if(!window.MainEngine) {
+                        window.MainEngine = new UltimateUKFEngine();
+                    }
+                    document.getElementById('gps-status').textContent = "SYSTÈME PRÊT";
+                    document.getElementById('gps-status').style.color = "#00ff00";
+                }
+            }, 1000);
+        });
     
    </script>
 </body>
